[gd_scene load_steps=14 format=3 uid="uid://b7038mhew1d2l"]

[ext_resource type="FontFile" uid="uid://cq6y8rhxtac33" path="res://Assets/dogicapixel.ttf" id="1_cwxij"]
[ext_resource type="Script" path="res://Objects/UI/Scripts/DetailStatBlock.gd" id="2_y5j5e"]
[ext_resource type="Texture2D" uid="uid://bulrlqlf42moe" path="res://Assets/Bag.png" id="3_c4oro"]
[ext_resource type="Texture2D" uid="uid://csnjvdqwhfwhj" path="res://Assets/Close.png" id="3_xpse3"]
[ext_resource type="Texture2D" uid="uid://d3tase345qgjc" path="res://Assets/SmallElementIcons/SmallFiretIcon.png" id="4_1b4q3"]
[ext_resource type="Texture2D" uid="uid://odg2jtsgatan" path="res://Assets/SmallElementIcons/SmallEarthIcon.png" id="5_gic3o"]
[ext_resource type="Texture2D" uid="uid://cuwc1aag580p0" path="res://Assets/SmallElementIcons/SmallWaterIcon.png" id="6_ytxtl"]
[ext_resource type="Texture2D" uid="uid://dbtisi3jaw7g6" path="res://Assets/SmallElementIcons/SmallAirIcon.png" id="7_c0ayq"]
[ext_resource type="Texture2D" uid="uid://dk8u2vtmeakm0" path="res://Assets/SmallElementIcons/SmallElectricIcon.png" id="8_fjcnk"]
[ext_resource type="Texture2D" uid="uid://bh3fk7esfin4b" path="res://Assets/SmallElementIcons/SmallAcidIcon.png" id="9_pvoaq"]
[ext_resource type="Texture2D" uid="uid://ceul7lah0nrv" path="res://Assets/SmallElementIcons/SmallVoidIcon.png" id="10_bdapj"]

[sub_resource type="Theme" id="Theme_47dam"]
default_font = ExtResource("1_cwxij")
default_font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5ufn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="DetailStatBlock" type="PanelContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_47dam")
theme_override_styles/panel = SubResource("StyleBoxFlat_b5ufn")
script = ExtResource("2_y5j5e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sprite" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_c4oro")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 6

[node name="lblName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="lblLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level: "

[node name="lblLevelValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Value"

[node name="btnClose" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("3_xpse3")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_b5ufn")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 8
columns = 2

[node name="lblHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Health:"

[node name="lblHealthValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "100 / 100"
horizontal_alignment = 2

[node name="lblStrength" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Strength:"

[node name="lblStrengthValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="lblIntelligence" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Intelligence:"

[node name="lblIntelligenceValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="lblDexterity" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Dexterity:"

[node name="lblDexterityValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="lblSpeed" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Speed:"

[node name="lblSpeedValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="lblVitality" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Vitality:"

[node name="lblVitalityValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="lblResistance" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
text = "Resistance:"

[node name="lblResistanceValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/StatContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Value"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_b5ufn")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 6
columns = 2

[node name="FireIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("4_1b4q3")
stretch_mode = 2

[node name="lblFire" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="EarthIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_gic3o")
stretch_mode = 2

[node name="lblEarth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="WaterIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_ytxtl")
stretch_mode = 2

[node name="lblWater" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="AirIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_c0ayq")
stretch_mode = 2

[node name="lblAir" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="ElectricityIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_fjcnk")
stretch_mode = 2

[node name="lblElectricity" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="AcidIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_pvoaq")
stretch_mode = 2

[node name="lblAcid" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[node name="VoidIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("10_bdapj")
stretch_mode = 2

[node name="lblVoid" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btnClose" to="." method="_on_btn_close_pressed"]
